# Windows_Demo

MyVerySleepy/: CMakeLists.txt  ReadMe.md  build.bat
MyVerySleepy/libs/x64/Debug/: wxzlibd.lib
MyVerySleepy/src/: CMakeLists.txt  main.cpp
MyVerySleepy/src/profiler/: debugger.cpp  debugger.h  processinfo.cpp  processinfo.h  profiler.cpp  profiler.h  profilerthread.cpp  profilerthread.h  symbolinfo.cpp  symbolinfo.h  threadinfo.cpp  threadinfo.h
MyVerySleepy/src/utils/: container.h  dbginterface.cpp  dbginterface.h  except.h  mythread.cpp  mythread.h  osutils.cpp  osutils.h  sortlist.h  stringutils.cpp  stringutils.h
toolchains/CMakeToolChain/: CMakeLists.txt  build.bat
toolchains/CMakeToolChain/src/: CMakeLists.txt  main.cpp
write_bmp/: write_bmp.sln
write_bmp/write_bmp/: write_bmp.cpp  write_bmp.vcxproj  write_bmp.vcxproj.filters
write_bmp/write_bmp/x64/Debug/: vc143.idb  write_bmp.exe.recipe  write_bmp.ilk
write_bmp/write_bmp/x64/Debug/write_bmp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  write_bmp.lastbuildstate
